syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Matias-Correia/go-test_server/protologs";


package protologs;

// Log service defenition
service LogTestData{
	//Sends 
	rpc SendLogs (Log) returns (Empty){}
}

message Empty{}

// Log definition
message Log{
	string blockID = 1;
	string localpeer = 2;
	string remotepeer = 3;
	google.protobuf.Timestamp sentAt = 4;
	google.protobuf.Timestamp receivedAt = 5;
	google.protobuf.Timestamp blockRequestedAt = 6;
	bool duplicate = 7;
}